--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
 <body>
     <div class="container-fluid">
       <div class="row header">
-        <h1 class="col-md-7 col-md-offset-1">trackster</h1>
-        <input type="text" class="col-md-2 input" placeholder="Search">
-        <i class="col-md-1 fa fa-search fa-2x" id="search-button"></i>
+        <h1 class="col-xs-7 col-xs-offset-1">trackster</h1>
+        <input type="text" class="col-xs-2 input" placeholder="Search">
+        <i class="col-xs-1 fa fa-search fa-2x" id="search-button"></i>
       </div>
       <div class="row col-header">
-        <p class="col-md-offset-2 col-md-4">Song</p>
-        <p class="col-md-2">Artist</p>
-        <p class="col-md-2">Album</p>
-        <p class="col-md-2">Listeners</p>
+        <p class="col-xs-offset-2 col-xs-4">Song</p>
+        <p class="col-xs-2">Artist</p>
+        <p class="col-xs-2">Album</p>
+        <p class="col-xs-2">Listeners</p>
       </div>
       <div class="container-fluid" id="results">
           <div class="row results">
-          <a class="col-md-offset-1 col-md-1 fa-2x" href="https://www.youtube.com/watch?v=eI_O5_tJ1hA&feature=youtu.be"><i class="fa fa-play-circle-o"></i></a>
-          <p class="col-md-4">Fairytale  in the Supermarket</p>
-          <p class="col-md-2">The Raincoats</p>
-          <p class="col-md-2">101839</p>
-          <p class="col-md-2">101839</p>
+          <a class="col-xs-offset-1 col-xs-1 fa-2x" href="https://www.youtube.com/watch?v=eI_O5_tJ1hA&feature=youtu.be"><i class="fa fa-play-circle-o"></i></a>
+          <p class="col-xs-4">Fairytale  in the Supermarket</p>
+          <p class="col-xs-2">The Raincoats</p>
+          <p class="col-xs-2">101839</p>
+          <p class="col-xs-2">101839</p>
         </div>
       </div>
     </div>
